Worked On Operating System Lib

--- a/log.html
+++ b/log.html
@@ -2071,25 +2071,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,20806],[],[[4,0,0,[],[1,1530,19271],[[0,5,6,0,7,8,0,0,[1,1538,1975],[[1541,2,9]]],[0,10,6,0,11,0,0,0,[1,3517,37],[]],[0,12,6,0,13,14,0,0,[1,3559,10],[]],[0,15,6,0,16,17,0,0,[1,3569,4515],[[3569,2,18]]],[0,19,6,0,20,21,22,0,[1,8084,9135],[[17217,2,23]]],[3,24,0,0,0,0,0,0,[1,17221,3580],[[4,25,0,0,0,0,0,0,[1,20151,112],[[0,26,6,0,27,28,29,0,[1,20164,91],[[20255,2,30]]],[0,31,32,0,33,29,0,0,[1,20255,0],[]]]],[4,34,0,0,0,0,0,0,[1,20267,63],[[0,26,6,0,27,28,29,0,[1,20267,47],[[20314,2,35]]],[0,31,32,0,33,29,0,0,[1,20314,0],[]]]],[4,36,0,0,0,0,0,0,[1,20334,46],[[0,26,6,0,27,28,29,0,[1,20336,44],[[20380,2,37]]],[0,31,32,0,33,29,0,0,[1,20380,0],[]]]],[4,38,0,0,0,0,0,0,[1,20388,118],[[0,26,6,0,27,28,29,0,[1,20388,110],[[20488,2,39]]],[0,31,32,0,33,29,0,0,[1,20497,0],[]]]],[4,40,0,0,0,0,0,0,[1,20513,107],[[0,26,6,0,27,28,29,0,[1,20516,89],[[20605,2,41]]],[0,31,32,0,33,29,0,0,[1,20605,16],[]]]],[4,42,0,0,0,0,0,0,[1,20620,130],[[0,26,6,0,27,28,29,0,[1,20634,116],[[20750,2,43]]],[0,31,32,0,33,29,0,0,[1,20750,0],[]]]],[4,44,0,0,0,0,0,0,[1,20758,42],[[0,26,6,0,27,28,29,0,[1,20758,26],[[20785,2,45]]],[0,31,32,0,33,29,0,0,[1,20796,0],[]]]]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,47],[],[[4,0,0,[],[1,31,16],[[0,5,6,0,7,8,0,0,[1,45,2],[[45,2,9]]],[0,10,11,0,12,13,14,0,[1,47,0],[[47,2,15],[47,2,16],[47,2,17]]],[0,5,6,0,7,18,0,0,[1,47,0],[[47,2,19]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Demo8 Table Suite","*c:\\Mine\\Company\\Konsberg\\RobotProject\\selenium_suite\\demo8_table_suite.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20vfNzEvVd87PLUjMq9T3zs8rTkotStcPyk/KLwkoys9KTS7RL07NSc3LLM2NLy7NLEnVT0nNzbeIL0lMykmFiOgVgVQr2dHCVBv9RDsAqF1DMA==","*TC3 Print names","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*browser=chrome","*Opening browser 'chrome' to base url 'None'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Set Selenium Implicit Wait","*<p>Sets the implicit wait value used by Selenium.\x3c/p>","*20s","*Go To","*<p>Navigates the current browser window to the provided <code>url\x3c/code>.\x3c/p>","*url=https://datatables.net/extensions/select/examples/checkbox/checkbox.html","eNrzL0jNy8xLVygtylFQt0lUyChKTbNVyigpKSi20tdPSSwBwqSc1GK9vNQS/dSKktS84sz8vGL94tSc1GSQSGJuAVBaPzkjNTk7Kb8CztDLKMnNUbKjlkk2+ol26gDTkUCd","*Get Element Count","*<p>Returns the number of elements matching <code>locator\x3c/code>.\x3c/p>","*xpath=//table[@id='example']/tbody/tr","*${row_count}","*${row_count} = 7","*${i}    IN RANGE    1    ${row_count}+1","*${i} = 1","*Get Text","*<p>Returns the text value of the element identified by <code>locator\x3c/code>.\x3c/p>","*xpath=//table[@id='example']/tbody/tr[${i}]/td[2]","*${name}","*${name} = Tiger Nixon","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*${i} = 2","*${name} = Timothy Mooney","*${i} = 3","*${name} = Unity Butler","*${i} = 4","*${name} = Vivian Harrell","*${i} = 5","*${name} = Yuri Berry","*${i} = 6","*${name} = Zenaida Frank","*${i} = 7","*${name} = Zorita Serrano"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Demo3 Suite","*c:\\Mine\\Company\\Konsberg\\RobotProject\\robot_suite\\demo3_suite.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20vfNzEvVd87PLUjMq9T3zs8rTkotStcPyk/KLwkoys9KTS7RLwJx4otLM0tS9VNSc/ONIWw9sLiSHRUNs9FPtAMABI074A==","*TC3","*Log","*BuiltIn","*<p>Logs the given message with the given level.\x3c/p>","*${TEMPDIR}","*C:\\Users\\BALAJI~1\\AppData\\Local\\Temp","*List Files In Directory","*OperatingSystem","*<p>Wrapper for `List Directory` that returns only files.\x3c/p>","*path=${TEMPDIR}    pattern=dd_Back*","*@{files}","*Listing contents of directory '<a href=\"file://C:\\Users\\BALAJI~1\\AppData\\Local\\Temp\">C:\\Users\\BALAJI~1\\AppData\\Local\\Temp\x3c/a>'.","eNqV0k0KwjAQBeC9p/AEkplk8uNS9AQeIJS2FrEYSC1e31Bw5cI3m5DFNy8PMhz3t/s8LsfdMORT1z+mWtbncC7v51y6IbNhR4ai8TYIHeYyQTDXcVnnV76ufT8uy/+5RE6sIxh+H7jUWioyJRxEYKiLZzIiSTwM1fHeJQ4wVMfHdgsw1MfbyBaAxLZ9AQy1PYiFgBVjNtIOC0NlDzaeAhEM9fHsnUNgdIz12KC6RyKL9digPp6dAZa27Z9hiTD86fEBXjSvzg==","eNpzqE7LzEktrlWwVYhWSEmJd0pMzk4vyi/NS3HJL8/LyU9MiTcyMDIxNDC0MDAzNjc11MvJT1eoIUppfFFqcWlOSXxwaXJyanExMTotDU1MjU0MSVAKs8S1qCi/CKxPT08PAO9jRpE=","*${files}","eNqd0sEKwjAMBuBX8baLSJMmbXcVfQKPImWsYweHhc7h61sGnrwkvZQcvvD/0Ny7lOJ5GJ9zydsrXfLnteQhRTRIYCAYZz3DaclzdzyIbCzTui3veNvGcVpX0WoPxJZAY38x11JyES4yemaNVYcgGOaenca2hDjq0WtsS0iok9fYphAb0MosoK1fo7ENhQAZZJeIaLg+VmP1hdA48AAa2xSCjkhoA6G40G5bCvVgxYV22xSCZGQXXi/VIAeN/S/0+AIVc70j"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:19","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:21","fail":0,"id":"s1","label":"Demo8 Table Suite","name":"Demo8 Table Suite","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Demo3 Suite","name":"Demo3 Suite","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1729596408709;
+window.output["baseMillis"] = 1729660126318;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 20851;
+window.output["generated"] = 99;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
