--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,20806],[],[[4,0,0,[],[1,1530,19271],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,47],[],[[4,0,0,[],[1,31,16],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Demo8 Table Suite","*c:\\Mine\\Company\\Konsberg\\RobotProject\\selenium_suite\\demo8_table_suite.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20vfNzEvVd87PLUjMq9T3zs8rTkotStcPyk/KLwkoys9KTS7RL07NSc3LLM2NLy7NLEnVT0nNzbeIL0lMykmFiOgVgVQr2dHCVBv9RDsAqF1DMA==","*TC3 Print names"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Demo3 Suite","*c:\\Mine\\Company\\Konsberg\\RobotProject\\robot_suite\\demo3_suite.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20vfNzEvVd87PLUjMq9T3zs8rTkotStcPyk/KLwkoys9KTS7RLwJx4otLM0tS9VNSc/ONIWw9sLiSHRUNs9FPtAMABI074A==","*TC3"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:19","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:21","fail":0,"id":"s1","label":"Demo8 Table Suite","name":"Demo8 Table Suite","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Demo3 Suite","name":"Demo3 Suite","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1729596408709;
+window.output["baseMillis"] = 1729660126318;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 20851;
+window.output["generated"] = 99;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
